src/styles/editor.css
/* HM Pro Blocks - Editor styles */

.hm-container{
  border: 1px dashed rgba(0,0,0,.15);
  padding: 16px;
  box-sizing: border-box;
}

.editor-styles-wrapper .hm-container.alignfull{
  width: 100vw;
  max-width: 100vw;
  margin-left: calc(50% - 50vw);
  margin-right: calc(50% - 50vw);
}

.hmpb-container__picker{
  text-align: center;
  padding: 18px;
}

.hmpb-container__picker h3{
  margin: 0 0 6px;
}

.hmpb-container__picker p{
  margin: 0 0 12px;
  opacity: .75;
}

.hmpb-container__picker .components-button{
  margin: 0 6px;
}

